--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "tailwindcss": "^3.0.23"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.0.0",
         "alpinejs": "^3.9.0"
     }
 }
