--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,10 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
@@ -12,7 +15,8 @@
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
-        "livewire/livewire": "^2.10"
+        "livewire/livewire": "^2.10",
+        "wimil/followers": "dev-master"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -48,6 +52,15 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ]
+    },
+    "repositories": {
+        "require-dev": {
+            "type": "path",
+            "url": "/Applications/MAMP/htdocs/laravel/TestProject/packages/laravel-followers",
+            "options": {
+                "symlink": true
+            }
+        }
     },
     "extra": {
         "laravel": {
