--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "cviebrock/eloquent-sluggable": "^9.0",
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
         "jorenvanhocht/laravel-share": "^4.2",
@@ -16,7 +17,8 @@
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.10",
-        "wimil/followers": "dev-master"
+        "spatie/laravel-medialibrary": "^10.1",
+        "wimil/followers": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -54,13 +56,7 @@
         ]
     },
     "repositories": {
-        "require-dev": {
-            "type": "path",
-            "url": "/Applications/MAMP/htdocs/laravel/TestProject/packages/laravel-followers",
-            "options": {
-                "symlink": true
-            }
-        }
+        
     },
     "extra": {
         "laravel": {
