--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "cviebrock/eloquent-sluggable": "^9.0",
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
+        "jaybizzle/laravel-crawler-detect": "^1.2",
         "jorenvanhocht/laravel-share": "^4.2",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
